--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <title>我的主页</title>
     </head>
     <body>
-      <div align='center'>Hello World!</div>
+      <div align='center'>Hello 白苏宁!</div>
     </body>
     
 
